--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,3 +56,13 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
+.main {
+  flex: 3 60rem;
+}
+.sidebar {
+  flex: 1 20rem;
+}
