--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,10 +70,10 @@ footer {
 }
 /* products */
 .products {
-  display: flex;
+
   flex-wrap: wrap;
-  /* justify-content: center; */
-  /* align-items: center; */
+  justify-content: center;
+  align-items: center;
   padding: 0;
   margin: 0;
   list-style-type: none;
@@ -115,13 +115,29 @@ footer {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f0f0f0;
   cursor: pointer;
-  margin-right:80%;
+  margin-right:70%;
+  
 }
 .button:hover {
   border: 0.1rem #808080 solid;
 }
 .button.primary {
   background-color: #f0c040;
+  width:500px;
+  margin-left:6%;
+  margin-bottom:25px;
+
   
+}
+/* Filter */
+.filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+.filter div {
+  flex: 1;
 }
 
