--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,7 @@ a:hover {
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  background-color:#f59dd3;
   color: #ffffff;
   display: flex;
   justify-content: space-between;
@@ -52,7 +52,7 @@ main {
 }
 footer {
   grid-area: footer;
-  background-color: #203040;
+  background-color: #f59dd3;
   color: #ffffff;
   display: flex;
   justify-content: center;
