--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,40 +1,73 @@
+.Navbar{
+    display:flex;
+    background-color: black;
+    height:80px;
+    width:auto;
+}
+.left{
+    height:80px;
+    width:30%;
+    color:black;
+    background-color: aliceblue;
+  
+}
+
+
 .right{
     display:flex;
     gap:20px;
     font-size:14px;
-    margin-left: 200px;
     color:white;
+    padding:20px;
+    margin-left:40%;
 
 }
+
+.shop:hover{
+    background-color: aqua;
+    font-size: 17px;
+}
+
 .top{
-    height: 40px;
-    width:100%;
+    height: 20px;
+    width:auto;
     background-color:rgb(255, 250, 181);
     color:black;
-    padding:20px;
 }
 
 .body{
     height:460px;
-    width:100%;
+    width:auto;
     border:1px transparent;
-    display : flex;
-    gap:none;
+    margin-top: 1%;
+   
    
 }
 .body>img{
      height:460px;
-    width:50%;
+    width:100%;
 
+}
+.body:hover img{
+    transform:scale(1.25);
 }
 
 
 .footer{
     background-color:rgb(255, 248, 147);
     height:40px;
-    width:100%;
+    width:auto;
     color:black;
     margin:auto;
+    margin-top:3%;
+}
+.payfoot{
+    background-color:rgb(255, 248, 147);
+    height:40px;
+    width:auto;
+    color:black;
+    margin:auto;
+    margin-top:7%;
 }
 .pay{
     margin:auto;
@@ -53,7 +86,12 @@
     margin:auto;
     border:transparent;
     margin-left:43%;
-    margin-top: 15px;
+    margin-top: 2%;
+}
+.btn:hover{
+    
+    background-color: rgb(226, 24, 24);
+    
 }
 
 
