--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,10 +92,10 @@ footer {
 .product img {
   max-width: 37rem;
   max-height: 37rem;
-}
-.product:hover img{
+ }
+/* .product:hover img{
   transform: scale(1.5);
-}
+}  */
 .product-price {
   display: flex;
   justify-content: space-between;
