--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -41,6 +41,7 @@
     color:black;
 }
 
+
 .body{
     height:460px;
     width:auto;
@@ -228,3 +229,74 @@
                 margin-top: 30px;
         }
       }
+      .detail{
+          height:400px;
+          width:650px;
+          border: 1px solid transparent;
+          margin-left:4%;
+          margin-top:3%;
+          display:flex;
+          gap:10px;
+          background-color: rgb(248, 250, 252);
+          
+
+      }
+      .imgx{
+          height:100;
+          width:40%;
+          border:1px solid transparent;
+      }
+      .detail2{
+        height:100;
+        width:60%;
+        border:1px solid transparent;
+      }
+
+      
+      .body1{
+        height:400px;
+        width:auto;
+        border:1px transparent;
+        margin-top: 1%;
+        background-color: rgb(248, 217, 222);
+       
+       
+    }
+
+    /* CHECKOUT */
+    .form{
+        height:400px;
+        width:500px;
+        border:1px transparent;
+        display:flex;
+        margin:auto;
+        gap:40px;
+        flex-direction:column;
+    }
+    .input{
+        height:30px;
+        width: 450px;
+    }
+    .btn1{
+        height: 50px;
+        width:150px;
+        background-color:rgb(192, 219, 243);
+        color:black;
+        margin:auto;
+        border:transparent;
+        margin-left:35%;
+        margin-top: 1%;
+    }
+    .btn1:hover{
+       background-color:rgb(57, 204, 204);
+    }
+    /* CART */
+ .cart{
+    height :"60px" ;
+     width:"100%" ;
+    display:"flex";
+     gap:"30px";
+     border:1px solid black;
+       background-color:"black" ;
+         
+ }   
