--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -326,3 +326,10 @@
  .kk:hover{
      transform:scale(1.05);
  } 
+ .paymentBox{
+    width: 300px;
+    height:400px;
+    margin: 1px solid black;
+    margin-left: 37%;
+    gap:30px;
+ }
